request-relay/overlays/request-relay-inflightreq-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: request-relay-inflightreq-middleware
spec:
  inFlightReq:
    amount: 100
# protection aux attaques DDOS
