request-relay/overlays/request-relay-ratelimit-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: request-relay-ratelimit-middleware
spec:
  rateLimit:
    period: 1m
    average: 1
    burst: 5000
    sourceCriterion:
      ipStrategy:
        depth: 2
